--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -10,6 +10,7 @@ general.inputs.submit=Submit
 general.language.english=English
 general.language.spanish=Español
 general.me=Me
+general.remove=Remove
 general.you=You
 general.your=Your
 error.error=Error
