--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -8,7 +8,7 @@ general.inputs.no=No
 general.inputs.continue=Continue
 general.inputs.submit=Submit
 general.language.english=English
-general.language.spanish=Español
+general.language.spanish=EspaÃ±ol
 general.me=Me
 general.remove=Remove
 general.you=You
