Add dropzone general message

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -11,6 +11,7 @@ general.language.english=English
 general.language.spanish=Español
 general.me=Me
 general.remove=Remove
+general.cancel=Cancel
 general.you=You
 general.your=Your
 error.error=Error
