--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -20,5 +20,6 @@ general.files.maximum-number-of-files=You have uploaded the maximum number of fi
 general.files.add-your-files=Add your files
 #
 error.error=Error
+error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
 
 
