--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -16,9 +16,10 @@ general.you=You
 general.your=Your
 general.files.confirm-delete=You are about to delete your file called
 general.files.confirm-delete-ok=Is that okay?
-general.files.maximum-number-of-files=You have uploaded the maximum number of files (20). You will have the opportunity to share more with a caseworker later.
+general.files.maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
 general.files.add-your-files=Add your files
 #
 error.error=Error
+error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
 
 
