Change case of general.your in messages-form-flow.properties

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -13,7 +13,7 @@ general.me=Me
 general.remove=Remove
 general.cancel=Cancel
 general.you=You
-general.your=Your
+general.your=your
 general.files.confirm-delete=You are about to delete your file called
 general.files.confirm-delete-ok=Is that okay?
 general.files.maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
