--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -18,6 +18,7 @@ general.files.confirm-delete=You are about to delete your file called
 general.files.confirm-delete-ok=Is that okay?
 general.files.maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
 general.files.add-your-files=Add your files
+upload-documents.this-file-is-too-large=This file is too large and cannot be uploaded (max size: {0} MB)
 #
 error.error=Error
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
