Create generic error page
[#184161429]

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -21,4 +21,6 @@ general.files.add-your-files=Add your files
 upload-documents.this-file-is-too-large=This file is too large and cannot be uploaded (max size: {0} MB)
 #
 error.error=Error
+error.uh-oh=Uh oh!
+error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
