Add error message for 500 error in upload controller

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -19,6 +19,7 @@ general.files.confirm-delete-ok=Is that okay?
 general.files.maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
 general.files.add-your-files=Add your files
 upload-documents.this-file-is-too-large=This file is too large and cannot be uploaded (max size: {0} MB)
+upload-documents.file-upload-error=There was an error uploading your file. If this persists, please try uploading a different file.
 #
 error.error=Error
 error.uh-oh=Uh oh!
