Throw an error when HEIC and TIFF/TIF are included in accepted files and uploaded
[#183559489]

Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -16,12 +16,14 @@ general.you=You
 general.your=Your
 general.files.confirm-delete=You are about to delete your file called
 general.files.confirm-delete-ok=Is that okay?
-general.files.maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
 general.files.add-your-files=Add your files
 upload-documents.this-file-is-too-large=This file is too large and cannot be uploaded (max size: {0} MB)
 upload-documents.file-upload-error=There was an error uploading your file. If this persists, please try uploading a different file.
+upload-documents.error-heic=We are unable to process HEIC files. Please convert your file to a JPG or PNG and try again.
+upload-documents.error-tiff=We are unable to process TIFF files. Please convert your file to a JPG or PNG and try again.
+upload-documents.error-invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
+upload-documents.error-maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
 #
 error.error=Error
 error.uh-oh=Uh oh!
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
-error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
