Update error message properties
Co-authored-by: Lauren Kemperman <lkemperman@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -26,4 +26,4 @@ upload-documents.error-maximum-number-of-files=You have uploaded the maximum num
 #
 error.error=Error
 error.uh-oh=Uh oh!
-error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
+error.we-are-sorry=We're sorry, but something went wrong. Please try again later.
