Update number input to use inputmode and pattern

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -7,6 +7,7 @@ general.inputs.yes=Yes
 general.inputs.no=No
 general.inputs.continue=Continue
 general.inputs.submit=Submit
+general.inputs.number=Please make sure you are entering a positive, whole number or decimal value with 2 decimal places.
 general.language.english=English
 general.language.spanish=Español
 general.me=Me
@@ -25,7 +26,6 @@ error.error=Error
 error.uh-oh=Uh oh!
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
-
 state.al=AL - Alabama
 state.ak=AK - Alaska
 state.az=AZ - Arizona
