Configure state placeholder in message properties
[#184247237]

- We can use the defaults the same way we do for state names without requiring it to be specified by the library consumer

Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -26,6 +26,8 @@ error.error=Error
 error.uh-oh=Uh oh!
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
+
+state.placeholder=Select a state
 state.al=AL - Alabama
 state.ak=AK - Alaska
 state.az=AZ - Arizona
