wip: unvalidated address working, stuck on ValidatorService
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -88,3 +88,9 @@ state.wa=WA - Washington
 state.wv=WV - West Virginia
 state.wi=WI - Wisconsin
 state.wy=WY - Wyoming
+#
+address.street-address=Street Address
+address.apartment=Apartment
+address.city=City
+address.state=State
+address.zip=Zip code
