--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -89,8 +89,8 @@ state.wv=WV - West Virginia
 state.wi=WI - Wisconsin
 state.wy=WY - Wyoming
 #
-address.street-address=Street Address
-address.apartment=Apartment
+address.street-address-1=Street Address
+address.street-address-2=Apartment
 address.city=City
 address.state=State
 address.zip=Zip code
