Adds demo banner to header. Updates Demo Banner to trigger on a spring profile "demo"

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -26,12 +26,13 @@ upload-documents.error-tiff=We are unable to process TIFF files. Please convert 
 upload-documents.error-invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
 upload-documents.error-maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
 #
+demo.banner-text=<b>This site is for example purposes only</b>
+#
 error.error=Error
 error.uh-oh=Uh oh!
 error.we-are-sorry=We're sorry, but something went wrong. Please try again later.
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
-
 state.placeholder=Select a state
 state.al=AL - Alabama
 state.ak=AK - Alaska
