Pulling "Go back" out into a message property

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -3,6 +3,7 @@ general.day=Day
 general.year=Year
 general.edit=edit
 general.delete=delete
+general.go-back=Go Back
 general.inputs.yes=Yes
 general.inputs.no=No
 general.inputs.continue=Continue
