Show appropriate error when password-protected PDF is uploaded
[#184317984]

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -24,13 +24,14 @@ upload-documents.error-heic=We are unable to process HEIC files. Please convert 
 upload-documents.error-tiff=We are unable to process TIFF files. Please convert your file to a JPG or PNG and try again.
 upload-documents.error-invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
 upload-documents.error-maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
+upload-documents.error-password-protected=We are unable to process password-protected PDF files. Please remove the password and try again or try another PDF file.
+upload-documents.error-could-not-read-file=We could not read the uploaded file. Please try another file.
 #
 error.error=Error
 error.uh-oh=Uh oh!
 error.we-are-sorry=We're sorry, but something went wrong. Please try again later.
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
-
 state.placeholder=Select a state
 state.al=AL - Alabama
 state.ak=AK - Alaska
