--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -20,6 +20,15 @@ general.files.confirm-delete=You are about to delete your file called
 general.files.confirm-delete-ok=Is that okay?
 general.files.add-your-files=Add your files
 #
+address-validation.header.check-your-address=Verify the address you would like to use
+address-validation.header.make-sure-your-address-is-correct=Make sure your address is correct
+address-validation.warning.we-updated-the-address-you-entered=We updated the address you entered. If correct, please use the suggested address.
+address-validation.warning.we-couldnt-find-your-address=We couldn't find your address. To make sure you get mail from your county or Tribal Nation, you may edit your address or keep going.
+address-validation.button.edit-my-address=Edit my address
+address-validation.button.use-this-address=Use this address
+address-validation.suggested=Suggested Address
+address-validation.address-entered=Address You Entered
+#
 upload-documents.this-file-is-too-large=This file is too large and cannot be uploaded (max size: {0} MB)
 upload-documents.file-upload-error=There was an error uploading your file. If this persists, please try uploading a different file.
 upload-documents.error-heic=We are unable to process HEIC files. Please convert your file to a JPG or PNG and try again.
