--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -28,6 +28,7 @@ address-validation.button.edit-my-address=Edit my address
 address-validation.button.use-this-address=Use this address
 address-validation.suggested=Suggested Address
 address-validation.address-entered=Address You Entered
+address-validation.confirm=Confirm your address
 #
 upload-documents.this-file-is-too-large=This file is too large and cannot be uploaded (max size: {0} MB)
 upload-documents.file-upload-error=There was an error uploading your file. If this persists, please try uploading a different file.
