Create Create seperate templates for Smarty found a suggestion vs not
[#184618630]

Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>
Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -20,7 +20,7 @@ general.files.confirm-delete=You are about to delete your file called
 general.files.confirm-delete-ok=Is that okay?
 general.files.add-your-files=Add your files
 #
-address-validation.header.check-your-address=Verify the address you would like to use
+address-validation.check-your-address=Check your address
 address-validation.header.make-sure-your-address-is-correct=Make sure your address is correct
 address-validation.warning.we-updated-the-address-you-entered=We updated the address you entered. If correct, please use the suggested address.
 address-validation.warning.we-couldnt-find-your-address=We couldn't find your address. To make sure you get mail from your county or Tribal Nation, you may edit your address or keep going.
@@ -28,6 +28,7 @@ address-validation.button.edit-my-address=Edit my address
 address-validation.button.use-this-address=Use this address
 address-validation.suggested=Suggested Address
 address-validation.address-entered=Address You Entered
+address-validation.confirm=Confirm your address
 #
 upload-documents.this-file-is-too-large=This file is too large and cannot be uploaded (max size: {0} MB)
 upload-documents.file-upload-error=There was an error uploading your file. If this persists, please try uploading a different file.
