Extracting copy into message properties so they can be translated

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -19,6 +19,9 @@ general.your=Your
 general.files.confirm-delete=You are about to delete your file called
 general.files.confirm-delete-ok=Is that okay?
 general.files.add-your-files=Add your files
+general.files.file-added.one=1 file added
+general.files.file-added.other=files added
+general.files.uploaded-documents=Uploaded documents
 #
 address-validation.check-your-address=Check your address
 address-validation.header.make-sure-your-address-is-correct=Make sure your address is correct
