--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -10,7 +10,7 @@ general.inputs.continue=Continue
 general.inputs.submit=Submit
 general.inputs.number=Please make sure you are entering a positive, whole number or decimal value with 2 decimal places.
 general.language.english=English
-general.language.spanish=Español
+general.language.spanish=Espa\u00F1ol
 general.me=Me
 general.remove=Remove
 general.cancel=Cancel
