Update address fields to match USWDS convention
[#185111013]

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -102,8 +102,8 @@ state.wv=WV - West Virginia
 state.wi=WI - Wisconsin
 state.wy=WY - Wyoming
 #
-address.street-address-1=Street Address
-address.street-address-2=Apartment
+address.street-address-1=Street address
+address.street-address-2=Street address line 2
 address.city=City
 address.state=State
-address.zip=Zip code
+address.zip=ZIP code
