--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -50,7 +50,7 @@ error.we-are-sorry=We're sorry, but something went wrong. Please try again later
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
 #
-state.placeholder=Select a state
+state.placeholder=Please select
 state.al=AL - Alabama
 state.ak=AK - Alaska
 state.az=AZ - Arizona
