Secure PdfController download endpoint (#210)
* User can only download a PDF associated with their currently active sessionId
* Update test to include session with id


Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -49,6 +49,7 @@ error.uh-oh=Uh oh!
 error.we-are-sorry=We're sorry, but something went wrong. Please try again later.
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
+error.forbidden=You do not have permission to access this resource.
 #
 state.placeholder=Please select
 state.al=AL - Alabama
