WIP - add localeSelect from Doc LA

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -108,3 +108,8 @@ address.street-address-2=Street address line 2
 address.city=City
 address.state=State
 address.zip=ZIP code
+#
+language-preferences.button=Translate
+language-preferences.english=English
+language-preferences.spanish=Espa\u00F1ol
+language-preferences.vietnamese=Ti\u1EBFng Vi\u1EC7t
