--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -113,3 +113,6 @@ language-preferences.button=Translate
 language-preferences.english=English
 language-preferences.spanish=Espa\u00F1ol
 language-preferences.vietnamese=Ti\u1EBFng Vi\u1EC7t
+language-preferences.link-text.en=English
+language-preferences.link-text.es=Espa\u00F1ol
+language-preferences.link-text.vi=Ti\u1EBFng Vi\u1EC7t
