Add language previews

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -110,9 +110,8 @@ address.state=State
 address.zip=ZIP code
 #
 language-preferences.button=Translate
-language-preferences.english=English
-language-preferences.spanish=Espa\u00F1ol
-language-preferences.vietnamese=Ti\u1EBFng Vi\u1EC7t
+language-preferences.preview.first=Espa\u00F1ol
+language-preferences.preview.second=
 language-preferences.link-text.en=English
 language-preferences.link-text.es=Espa\u00F1ol
 language-preferences.link-text.vi=Ti\u1EBFng Vi\u1EC7t
