Add Accessible Language Selector  (#262)
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -108,3 +108,10 @@ address.street-address-2=Street address line 2
 address.city=City
 address.state=State
 address.zip=ZIP code
+#
+language-preferences.button=Translate
+language-preferences.preview.first=Espa\u00F1ol
+language-preferences.preview.second=
+language-preferences.link-text.en=English
+language-preferences.link-text.es=Espa\u00F1ol
+language-preferences.link-text.vi=Ti\u1EBFng Vi\u1EC7t
