Limit accepted filetypes & validate them serverside
[#185599082, #185617186]

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Lauren Kemperman <lkemperman@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -41,6 +41,7 @@ upload-documents.error-invalid-file-type=We aren't able to upload this type of f
 upload-documents.error-maximum-number-of-files=You have uploaded the maximum number of files. You will have the opportunity to share more with a caseworker later.
 upload-documents.error-password-protected=We are unable to process password-protected PDF files. Please remove the password and try again or try another PDF file.
 upload-documents.error-could-not-read-file=We could not read the uploaded file. Please try another file.
+upload-documents.error-mime-type=File contents did not match accepted mime types.
 #
 demo.banner-text=<b>This site is for example purposes only</b>
 #
