Fix encoding characters
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -10,7 +10,7 @@ general.inputs.continue=Continue
 general.inputs.submit=Submit
 general.inputs.number=Please make sure you are entering a positive, whole number or decimal value with 2 decimal places.
 general.language.english=English
-general.language.spanish=Espa\u00F1ol
+general.language.spanish=Español
 general.me=Me
 general.remove=Remove
 general.cancel=Cancel
@@ -110,8 +110,8 @@ address.state=State
 address.zip=ZIP code
 #
 language-preferences.button=Translate
-language-preferences.preview.first=Espa\u00F1ol
+language-preferences.preview.first=Español
 language-preferences.preview.second=
 language-preferences.link-text.en=English
-language-preferences.link-text.es=Espa\u00F1ol
-language-preferences.link-text.vi=Ti\u1EBFng Vi\u1EC7t
+language-preferences.link-text.es=Español
+language-preferences.link-text.vi=Ti?ng Vi?t
