--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -62,5 +62,5 @@ language-preferences.button=Traducir
 language-preferences.preview.first=English
 language-preferences.preview.second=
 language-preferences.link-text.en=English
-language-preferences.link-text.es=Espa\u00F1ol
-language-preferences.link-text.vi=Ti\u1EBFng Vi\u1EC7t
+language-preferences.link-text.es=Español
+language-preferences.link-text.vi=Ti?ng Vi?t
