--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -42,6 +42,7 @@ upload-documents.error-maximum-number-of-files=You have uploaded the maximum num
 upload-documents.error-password-protected=We are unable to process password-protected PDF files. Please remove the password and try again or try another PDF file.
 upload-documents.error-could-not-read-file=We could not read the uploaded file. Please try another file.
 upload-documents.error-mime-type=File contents did not match accepted mime types.
+upload-documents.error-virus-found=We are unable to process this file because a virus was detected. Please try another file.
 #
 demo.banner-text=<b>This site is for example purposes only</b>
 #
