Block upload if ClammitVirusScanner is unreachable
- if form-flow.uploads.virus-scanner.block-if-unreachable is set to true then the upload will be locked and an appropriate error message will be displayed
- if set to false, then the upload will be allowed

[#185770088]

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -43,6 +43,7 @@ upload-documents.error-password-protected=We are unable to process password-prot
 upload-documents.error-could-not-read-file=We could not read the uploaded file. Please try another file.
 upload-documents.error-mime-type=File contents did not match accepted mime types.
 upload-documents.error-virus-found=We are unable to process this file because a virus was detected. Please try another file.
+upload-documents.error-virus-scanner-unavailable=We are unable to process your files at this time. Please try again later.
 #
 demo.banner-text=<b>This site is for example purposes only</b>
 #
