Add default disabled flow screen
[#185951075]

Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -118,3 +118,7 @@ language-preferences.preview.second=
 language-preferences.link-text.en=English
 language-preferences.link-text.es=Español
 language-preferences.link-text.vi=Ti?ng Vi?t
+#
+disabled-feature.header=Sorry, that feature is currently unavailable
+disabled-feature.subtext=If you believe this is a mistake or need additional support, please try again later.
+disabled-feature.return=Return to the homepage
