WIP - Implement for POST and add default message on redirect
[#186001975]

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -22,6 +22,7 @@ general.files.add-your-files=Add your files
 general.files.file-added.one=1 file added
 general.files.file-added.other=files added
 general.files.uploaded-documents=Uploaded documents
+general.locked-submission=You've already submitted this application. To protect your data, we can't let you go back at this time.
 #
 address-validation.check-your-address=Check your address
 address-validation.header.make-sure-your-address-is-correct=Make sure your address is correct
@@ -122,3 +123,5 @@ language-preferences.link-text.vi=Ti?ng Vi?t
 disabled-feature.header=Sorry, that feature is currently unavailable
 disabled-feature.subtext=If you believe this is a mistake or need additional support, please try again later.
 disabled-feature.return=Return to the homepage
+
+
