--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -44,7 +44,8 @@ upload-documents.error-password-protected=We are unable to process password-prot
 upload-documents.error-could-not-read-file=We could not read the uploaded file. Please try another file.
 upload-documents.error-mime-type=File contents did not match accepted mime types.
 upload-documents.error-virus-found=We are unable to process this file because a virus was detected. Please try another file.
-upload-documents.error-virus-scanner-unavailable=The upload service could not be reached at this time. Please try again later. 
+upload-documents.error-virus-scanner-unavailable=The upload service could not be reached at this time. Please try again later.
+upload-documents.locked-submission=You've already submitted this application. You can no longer upload documents at this time.
 #
 demo.banner-text=<b>This site is for example purposes only</b>
 #
