Update spanish translations
[#186142239]

--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -4,7 +4,7 @@ general.year=Año
 general.edit=editar
 general.delete=borrar
 general.go-back=Regresa
-general.inputs.yes=Sî
+general.inputs.yes=Sí
 general.inputs.no=No
 general.inputs.continue=Continuar
 general.inputs.submit=Presentar
@@ -18,12 +18,12 @@ general.you=Usted
 general.your=Su
 general.files.confirm-delete=Está a punto de eliminar su archivo llamado
 general.files.confirm-delete-ok=¿Está bien?
-general.files.add-your-files=Agrega sus archivos
+general.files.add-your-files=Agregue sus archivos
 general.files.file-added.one=1 archivo agregado
 general.files.file-added.other=archivos agregados
 general.files.uploaded-documents=Documentos subidos
 #
-address-validation.check-your-address=Verifica su dirección
+address-validation.check-your-address=Verifique su dirección
 address-validation.header.make-sure-your-address-is-correct=Asegúrese de que su dirección sea correcta
 address-validation.warning.we-updated-the-address-you-entered=Hemos actualizado la dirección que ingresó. Si es correcto, utilice la dirección sugerida.
 address-validation.warning.we-couldnt-find-your-address=No pudimos encontrar su dirección. Para asegurarse de recibir correo de su condado o nación tribal, puede editar su dirección o continuar.
@@ -35,32 +35,40 @@ address-validation.confirm=Confirme su dirección
 #
 upload-documents.this-file-is-too-large=Este archivo es demasiado grande y no se puede subir (tamaño máximo: {0} MB)
 upload-documents.file-upload-error=Se ha producido un error al cargar su archivo. Si esto persiste, intente cargar un archivo diferente.
-upload-documents.error-heic=No podemos procesar archivos HEIC. Por favor, convierta su archivo a JPG o PNG y vuelva a intentarlo.
-upload-documents.error-tiff=No podemos procesar archivos TIFF. Por favor, convierta su archivo a JPG o PNG y vuelva a intentarlo.
-upload-documents.error-invalid-file-type=No podemos cargar este tipo de archivo. Por favor, intente con otro archivo que termine en uno de los siguientes:
-upload-documents.error-maximum-number-of-files=Ha subido la cantidad máxima de archivos. Tendrá la oportunidad de compartir más con un asistente social más tarde.
+upload-documents.error-heic=No podemos procesar archivos HEIC. Por favor convierta su archivo a JPG o PNG y vuelva a intentarlo.
+upload-documents.error-tiff=No podemos procesar archivos TIFF. Por favor convierta su archivo a JPG o PNG y vuelva a intentarlo.
+upload-documents.error-invalid-file-type=No podemos cargar este tipo de archivo. Por favor intente con otro archivo que termine en uno de los siguientes:
+upload-documents.error-maximum-number-of-files=Ha subido la cantidad máxima de archivos. Tendrá la oportunidad de compartir más con un asistente social más adelante.
 upload-documents.error-password-protected=No podemos procesar archivos PDF protegidos con contraseña. Elimine la contraseña y vuelva a intentarlo o pruebe con otro archivo PDF.
-upload-documents.error-could-not-read-file=No pudimos leer el archivo subido. Por favor, intente con otro archivo.
+upload-documents.error-could-not-read-file=No pudimos leer el archivo subido. Por favor intente con otro archivo.
+upload-documents.error-mime-type=El contenido del archivo no coincide con los tipos MIME aceptados.
+upload-documents.error-virus-found=No podemos procesar este archivo porque se detectó un virus. Por favor, intente con otro archivo.
+upload-documents.error-virus-scanner-unavailable=No se pudo acceder al servicio de carga en este momento. Por favor, inténtelo de nuevo más tarde.
 #
-demo.banner-text=<b>Este sitio es solo para fines de ejemplo</b>
+demo.banner-text=<b>El proposito de este sitio es sólo demostrar un ejemplo</b>
 #
 error.error=Error
 error.uh-oh=Oh, no!
-error.we-are-sorry=Lo sentimos, pero algo salió mal. Por favor, inténtelo de nuevo más tarde.
-error.its-not-you-description=Lo sentimos, pero algo salió mal. Por favor, inténtelo de nuevo más tarde.
-error.files.invalid-file-type=No podemos cargar este tipo de archivo. Por favor, intente con otro archivo que termine en uno de los siguientes:
+error.we-are-sorry=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuevo más tarde.
+error.its-not-you-description=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuevo más tarde.
+error.files.invalid-file-type=No podemos cargar este tipo de archivo. Por favor intente con otro archivo que termine en uno de los siguientes:
 error.forbidden=Usted no tiene permiso para acceder a este recurso.
 #
 state.placeholder=Por favor seleccione 
 #
-address.street-address-1=Dirección de calle
-address.street-address-2=Dirección de la calle línea 2
+address.street-address-1=Dirección
+address.street-address-2=Dirección (más detalles)
 address.city=Ciudad
 address.state=Estado
 address.zip=Código postal
+#
 language-preferences.button=Traducir
 language-preferences.preview.first=English
 language-preferences.preview.second=
 language-preferences.link-text.en=English
 language-preferences.link-text.es=Español
 language-preferences.link-text.vi=Ti?ng Vi?t
+#
+disabled-feature.header=Lo siento, esa función no está disponible en este momento.
+disabled-feature.subtext=Si crees que esto es un error o necesitas más ayuda, por favor intenta de nuevo más tarde.
+disabled-feature.return=Regresa a la página principal.
