Create configuration for locking the Submission for a flow after it is submitted (#437)
Adds the ability to lock a flow down such that it redirects the user to a configured page when they attempt to access a page or POST to a page within a flow after their application has been submitted.

* Consolidate DisabedFlowPropertyConfiguration to FormFlowConfigurationProperties
* Create test for locked submission in a given flow
* Add tests for flows configuration factory flow validations
* Refactor FlowsConfigurationFactory
* Validate first screen when session continuity interceptor is enabled
* Add documentation of submission locking to the README

---------

Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -22,6 +22,7 @@ general.files.add-your-files=Add your files
 general.files.file-added.one=1 file added
 general.files.file-added.other=files added
 general.files.uploaded-documents=Uploaded documents
+general.locked-submission=You've already submitted this application. To protect your data, we can't let you go back at this time.
 #
 address-validation.check-your-address=Check your address
 address-validation.header.make-sure-your-address-is-correct=Make sure your address is correct
@@ -43,7 +44,8 @@ upload-documents.error-password-protected=We are unable to process password-prot
 upload-documents.error-could-not-read-file=We could not read the uploaded file. Please try another file.
 upload-documents.error-mime-type=File contents did not match accepted mime types.
 upload-documents.error-virus-found=We are unable to process this file because a virus was detected. Please try another file.
-upload-documents.error-virus-scanner-unavailable=The upload service could not be reached at this time. Please try again later. 
+upload-documents.error-virus-scanner-unavailable=The upload service could not be reached at this time. Please try again later.
+upload-documents.locked-submission=You've already submitted this application. You can no longer upload documents at this time.
 #
 demo.banner-text=<b>This site is for example purposes only</b>
 #
@@ -122,3 +124,5 @@ language-preferences.link-text.vi=Ti?ng Vi?t
 disabled-feature.header=Sorry, that feature is currently unavailable
 disabled-feature.subtext=If you believe this is a mistake or need additional support, please try again later.
 disabled-feature.return=Return to the homepage
+
+
