Minor Spanish translation fixes
[#186142239]

--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -67,8 +67,8 @@ language-preferences.preview.first=English
 language-preferences.preview.second=
 language-preferences.link-text.en=English
 language-preferences.link-text.es=Español
-language-preferences.link-text.vi=Ti?ng Vi?t
+language-preferences.link-text.vi=Ti\u1EBFng Vi\u1EC7t
 #
-disabled-feature.header=Lo siento, esa función no está disponible en este momento.
-disabled-feature.subtext=Si crees que esto es un error o necesitas más ayuda, por favor intenta de nuevo más tarde.
-disabled-feature.return=Regresa a la página principal.
+disabled-feature.header=Lo sentimos, esa función no está disponible en este momento.
+disabled-feature.subtext=Si cree que esto es un error o necesita más ayuda, por favor intente de nuevo más tarde.
+disabled-feature.return=Regresar a la página principal.
