Adding translations known translations

--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -52,7 +52,7 @@ upload-documents.error-virus-scanner-unavailable=No se pudo acceder al servicio 
 demo.banner-text=<b>El proposito de este sitio es sólo demostrar un ejemplo</b>
 #
 error.error=Error
-error.uh-oh=Oh, no!
+error.uh-oh=Oh oh!
 error.we-are-sorry=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuevo más tarde.
 error.its-not-you-description=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuevo más tarde.
 error.files.invalid-file-type=No podemos cargar este tipo de archivo. Por favor intente con otro archivo que termine en uno de los siguientes:
