updated the placeholders to change based on the base language.

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -2,6 +2,9 @@ general.skip-to-content=Skip to content
 general.month=Month
 general.day=Day
 general.year=Year
+general.month-format=mm
+general.day-format=dd
+general.year-format=yyyy
 general.edit=edit
 general.delete=delete
 general.go-back=Go Back
