--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -2,6 +2,9 @@ general.skip-to-content=Saltar al contenido
 general.month=Mes
 general.day=Día
 general.year=Año
+general.month-format=mm
+general.day-format=dd
+general.year-format=aaaa
 general.edit=editar
 general.delete=borrar
 general.go-back=Regresa
