--- a/src/main/resources/messages-form-flow_vi.properties
+++ b/src/main/resources/messages-form-flow_vi.properties
@@ -1,24 +1,54 @@
+general.skip-to-content=Chuy\u1EC3n \u0111\u1EBFn n\u1ED9i dung
+general.month=Th\u00E1ng
+general.day=Ng\u00E0y
+general.year=N\u0103m
 general.edit=ch\u1EC9nh s\u1EEDa
 general.delete=X\u00F3a b\u1ECF
 general.go-back=Quay l\u1EA1i
 general.inputs.yes=C\u1EA7n
 general.inputs.no=Kh\u00F4ng
 general.inputs.continue=Ti\u1EBFp t\u1EE5c
+general.inputs.submit=G\u1EEDi
+general.inputs.number=Vui l\u00F2ng \u0111\u1EA3m b\u1EA3o r\u1EB1ng qu\u00FD v\u1ECB \u0111ang nh\u1EADp gi\u00E1 tr\u1ECB d\u01B0\u01A1ng, s\u1ED1 nguy\u00EAn ho\u1EB7c s\u1ED1 th\u1EADp ph\u00E2n c\u00F3 2 ch\u1EEF s\u1ED1 th\u1EADp ph\u00E2n.
 general.language.english=English
 general.language.spanish=Espa\u00F1ol
+general.me=T\u00F4i
 general.remove=Di d\u1EDDi
 general.cancel=H\u1EE7y b\u1ECF
+general.you=Qu\u00FD v\u1ECB
+general.your=C\u1EE7a qu\u00FD v\u1ECB
 general.files.confirm-delete=B\u1EA1n s\u1EAFp x\u00F3a t\u1EC7p c\u00F3 t\u00EAn
 general.files.confirm-delete-ok=\u0110i\u1EC1u \u0111\u00F3 c\u00F3 \u1ED5n kh\u00F4ng?
+general.files.add-your-files=Th\u00EAm t\u1EADp tin c\u1EE7a qu\u00FD v\u1ECB
 general.files.file-added.one=\u0110\u00E3 th\u00EAm 1 t\u1EC7p
-general.files.file-added.other=files added
+general.files.file-added.other=\u0111\u00E3 th\u00EAm t\u1EADp tin
 general.files.uploaded-documents=T\u00E0i li\u1EC7u \u0111\u00E3 t\u1EA3i l\u00EAn
+general.locked-submission=Qu\u00FD v\u1ECB \u0111\u00E3 g\u1EEDi \u0111\u01A1n \u0111\u0103ng k\u00FD n\u00E0y. \u0110\u1EC3 b\u1EA3o v\u1EC7 d\u1EEF li\u1EC7u, hi\u1EC7n qu\u00FD v\u1ECB kh\u00F4ng \u0111\u01B0\u1EE3c ph\u00E9p quay l\u1EA1i.
 #
+address-validation.check-your-address=Ki\u1EC3m tra \u0111\u1ECBa ch\u1EC9 c\u1EE7a qu\u00FD v\u1ECB
+address-validation.header.make-sure-your-address-is-correct=H\u00E3y ch\u1EAFc ch\u1EAFn \u0111\u1ECBa ch\u1EC9 \u0111\u00E3 \u0111\u01B0\u1EE3c nh\u1EADp \u0111\u00FAng
+address-validation.warning.we-updated-the-address-you-entered=Ch\u00FAng t\u00F4i \u0111\u00E3 c\u1EADp nh\u1EADt \u0111\u1ECBa ch\u1EC9 qu\u00FD v\u1ECB nh\u1EADp. N\u1EBFu \u0111\u00FAng, vui l\u00F2ng s\u1EED d\u1EE5ng \u0111\u1ECBa ch\u1EC9 \u0111\u01B0\u1EE3c \u0111\u1EC1 xu\u1EA5t.
+address-validation.warning.we-couldnt-find-your-address=Ch\u00FAng t\u00F4i kh\u00F4ng t\u00ECm th\u1EA5y \u0111\u1ECBa ch\u1EC9 c\u1EE7a qu\u00FD v\u1ECB. \u0110\u1EC3 \u0111\u1EA3m b\u1EA3o qu\u00FD v\u1ECB nh\u1EADn \u0111\u01B0\u1EE3c th\u01B0 t\u1EEB qu\u1EADn ho\u1EB7c B\u1ED9 T\u1ED9c c\u1EE7a m\u00ECnh, qu\u00FD v\u1ECB c\u00F3 th\u1EC3 ch\u1EC9nh s\u1EEDa \u0111\u1ECBa ch\u1EC9 c\u1EE7a m\u00ECnh ho\u1EB7c ti\u1EBFp t\u1EE5c.
+address-validation.button.edit-my-address=Ch\u1EC9nh s\u1EEDa \u0111\u1ECBa ch\u1EC9 c\u1EE7a t\u00F4i
+address-validation.button.use-this-address=S\u1EED d\u1EE5ng \u0111\u1ECBa ch\u1EC9 n\u00E0y
+address-validation.suggested=\u0110\u1ECBa ch\u1EC9 \u0111\u01B0\u1EE3c \u0111\u1EC1 xu\u1EA5t
+address-validation.address-entered=\u0110\u1ECBa ch\u1EC9 qu\u00FD v\u1ECB \u0111\u00E3 nh\u1EADp
+address-validation.confirm=X\u00E1c nh\u1EADn \u0111\u1ECBa ch\u1EC9 c\u1EE7a qu\u00FD v\u1ECB
 #
 upload-documents.this-file-is-too-large=T\u1EADp tin n\u00E0y qu\u00E1 l\u1EDBn v\u00E0 kh\u00F4ng th\u1EC3 t\u1EA3i l\u00EAn (k\u00EDch th\u01B0\u1EDBc t\u1ED1i \u0111a: {0} MB)
+upload-documents.file-upload-error=\u0110\u00E3 x\u1EA3y ra l\u1ED7i khi t\u1EA3i t\u1EADp tin c\u1EE7a qu\u00FD v\u1ECB l\u00EAn. N\u1EBFu t\u00ECnh tr\u1EA1ng n\u00E0y v\u1EABn ti\u1EBFp di\u1EC5n, vui l\u00F2ng th\u1EED t\u1EA3i l\u00EAn t\u1EADp tin kh\u00E1c.
+upload-documents.error-heic=Ch\u00FAng t\u00F4i kh\u00F4ng th\u1EC3 x\u1EED l\u00FD t\u1EADp tin HEIC. Vui l\u00F2ng chuy\u1EC3n \u0111\u1ED5i t\u1EADp tin c\u1EE7a qu\u00FD v\u1ECB sang \u0111\u1ECBnh d\u1EA1ng JPG ho\u1EB7c PNG v\u00E0 th\u1EED l\u1EA1i.
+upload-documents.error-tiff=Ch\u00FAng t\u00F4i kh\u00F4ng th\u1EC3 x\u1EED l\u00FD t\u1EADp tin TIFF. Vui l\u00F2ng chuy\u1EC3n \u0111\u1ED5i t\u1EADp tin c\u1EE7a qu\u00FD v\u1ECB sang \u0111\u1ECBnh d\u1EA1ng JPG ho\u1EB7c PNG v\u00E0 th\u1EED l\u1EA1i.
 upload-documents.error-invalid-file-type=Ch\u00FAng t\u00F4i kh\u00F4ng th\u1EC3 t\u1EA3i l\u00EAn lo\u1EA1i t\u1EADp tin n\u00E0y. Vui l\u00F2ng th\u1EED m\u1ED9t t\u1EADp tin kh\u00E1c k\u1EBFt th\u00FAc b\u1EB1ng m\u1ED9t trong c\u00E1c \u0111u\u00F4i sau \u0111\u00E2y:
 upload-documents.error-maximum-number-of-files=Qu\u00FD v\u1ECB \u0111\u00E3 t\u1EA3i l\u00EAn s\u1ED1 t\u1EADp tin t\u1ED1i \u0111a. Qu\u00FD v\u1ECB s\u1EBD c\u00F3 c\u01A1 h\u1ED9i chia s\u1EBB nhi\u1EC1u h\u01A1n v\u1EDBi ng\u01B0\u1EDDi ph\u1EE5 tr\u00E1ch h\u1ED3 s\u01A1 sau n\u00E0y.
+upload-documents.error-password-protected=Ch\u00FAng t\u00F4i kh\u00F4ng th\u1EC3 x\u1EED l\u00FD t\u1EADp tin PDF \u0111\u01B0\u1EE3c b\u1EA3o v\u1EC7 b\u1EB1ng m\u1EADt kh\u1EA9u. Vui l\u00F2ng x\u00F3a m\u1EADt kh\u1EA9u v\u00E0 th\u1EED l\u1EA1i ho\u1EB7c th\u1EED t\u1EADp tin PDF kh\u00E1c.
+upload-documents.error-could-not-read-file=Ch\u00FAng t\u00F4i kh\u00F4ng th\u1EC3 \u0111\u1ECDc t\u1EADp tin \u0111\u00E3 t\u1EA3i l\u00EAn. Vui l\u00F2ng th\u1EED t\u1EADp tin kh\u00E1c.
+upload-documents.error-mime-type=N\u1ED9i dung t\u1EADp tin kh\u00F4ng kh\u1EDBp v\u1EDBi ki\u1EC3u mime \u0111\u01B0\u1EE3c ch\u1EA5p nh\u1EADn.
+upload-documents.error-virus-found=Ch\u00FAng t\u00F4i kh\u00F4ng th\u1EC3 x\u1EED l\u00FD t\u1EADp tin n\u00E0y v\u00EC ph\u00E1t hi\u1EC7n th\u1EA5y vi-r\u00FAt. Vui l\u00F2ng th\u1EED t\u1EADp tin kh\u00E1c.
+upload-documents.error-virus-scanner-unavailable=Hi\u1EC7n kh\u00F4ng th\u1EC3 truy c\u1EADp d\u1ECBch v\u1EE5 t\u1EA3i l\u00EAn. Vui l\u00F2ng th\u1EED l\u1EA1i sau.
+upload-documents.locked-submission=Qu\u00FD v\u1ECB \u0111\u00E3 g\u1EEDi \u0111\u01A1n \u0111\u0103ng k\u00FD n\u00E0y. Hi\u1EC7n qu\u00FD v\u1ECB kh\u00F4ng c\u00F2n quy\u1EC1n t\u1EA3i gi\u1EA5y t\u1EDD l\u00EAn.
 #
+demo.banner-text=<b>Trang web n\u00E0y ch\u1EC9 \u0111\u1EC3 l\u00E0m v\u00ED d\u1EE5</b>
 #
 error.error=L\u1ED7i
 error.uh-oh=\u1ED2!
@@ -27,10 +57,21 @@ error.its-not-you-description=Ch\u00FAng t\u00F4i r\u1EA5t ti\u1EBFc, nh\u01B0ng
 error.files.invalid-file-type=Ch\u00FAng t\u00F4i kh\u00F4ng th\u1EC3 t\u1EA3i l\u00EAn lo\u1EA1i t\u1EADp tin n\u00E0y. Vui l\u00F2ng th\u1EED m\u1ED9t t\u1EADp tin kh\u00E1c k\u1EBFt th\u00FAc b\u1EB1ng m\u1ED9t trong c\u00E1c \u0111u\u00F4i sau \u0111\u00E2y:
 error.forbidden=Qu\u00FD v\u1ECB kh\u00F4ng \u0111\u01B0\u1EE3c ph\u00E9p truy c\u1EADp t\u00E0i nguy\u00EAn n\u00E0y.
 #
+state.placeholder=Vui l\u00F2ng ch\u1ECDn
 #
+address.street-address-1=T\u00EAn \u0111\u01B0\u1EDDng
+address.street-address-2=T\u00EAn \u0111\u01B0\u1EDDng ph\u1EE5
+address.city=Th\u00E0nh ph\u1ED1
+address.state=Ti\u1EC3u bang
+address.zip=M\u00E3 ZIP
 #
 language-preferences.button=Phi\u00EAn d\u1ECBch
+language-preferences.preview.first=English
 language-preferences.preview.second=
+language-preferences.link-text.en=English
+language-preferences.link-text.es=Espa\u00F1ol
+language-preferences.link-text.vi=Ti\u1EBFng Vi\u1EC7t
 #
-
-
+disabled-feature.header=R\u1EA5t ti\u1EBFc, t\u00EDnh n\u0103ng \u0111\u00F3 hi\u1EC7n kh\u00F4ng kh\u1EA3 d\u1EE5ng
+disabled-feature.subtext=N\u1EBFu qu\u00FD v\u1ECB cho r\u1EB1ng \u0111\u00E3 x\u1EA3y ra nh\u1EA7m l\u1EABn ho\u1EB7c c\u1EA7n h\u1ED7 tr\u1EE3 th\u00EAm, vui l\u00F2ng th\u1EED l\u1EA1i sau.
+disabled-feature.return=Quay tr\u1EDF l\u1EA1i trang ch\u1EE7
