--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -11,6 +11,7 @@ general.go-back=Regresa
 general.inputs.yes=Sí
 general.inputs.no=No
 general.inputs.continue=Continuar
+general.none-of-the-above=Ninguna de las anteriores
 general.inputs.submit=Presentar
 general.inputs.number=Asegúrese de ingresar un número entero positivo o un valor decimal con 2 decimales.
 general.language.english=Inglés
