--- a/src/main/resources/messages-form-flow_vi.properties
+++ b/src/main/resources/messages-form-flow_vi.properties
@@ -9,6 +9,7 @@ general.inputs.yes=C\u1EA7n
 general.inputs.no=Kh\u00F4ng
 general.inputs.continue=Ti\u1EBFp t\u1EE5c
 general.inputs.submit=G\u1EEDi
+general.none-of-the-above=Kh\u00F4ng c\u00F3 \u0111\u00E1p \u00E1n n\u00E0o nh\u01B0 tr\u00EAngeneral.inputs.submit=G\u1EEDi
 general.inputs.number=Vui l\u00F2ng \u0111\u1EA3m b\u1EA3o r\u1EB1ng qu\u00FD v\u1ECB \u0111ang nh\u1EADp gi\u00E1 tr\u1ECB d\u01B0\u01A1ng, s\u1ED1 nguy\u00EAn ho\u1EB7c s\u1ED1 th\u1EADp ph\u00E2n c\u00F3 2 ch\u1EEF s\u1ED1 th\u1EADp ph\u00E2n.
 general.language.english=English
 general.language.spanish=Espa\u00F1ol
