--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -11,6 +11,7 @@ general.go-back=Regresa
 general.inputs.yes=Sí
 general.inputs.no=No
 general.inputs.continue=Continuar
+general.none-of-the-above=Ninguna de las anteriores
 general.inputs.submit=Presentar
 general.inputs.number=Asegúrese de ingresar un número entero positivo o un valor decimal con 2 decimales.
 general.language.english=Inglés
@@ -52,7 +53,7 @@ upload-documents.error-virus-scanner-unavailable=No se pudo acceder al servicio 
 demo.banner-text=<b>El proposito de este sitio es sólo demostrar un ejemplo</b>
 #
 error.error=Error
-error.uh-oh=Oh, no!
+error.uh-oh=Oh oh!
 error.we-are-sorry=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuevo más tarde.
 error.its-not-you-description=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuevo más tarde.
 error.files.invalid-file-type=No podemos cargar este tipo de archivo. Por favor intente con otro archivo que termine en uno de los siguientes:
