Change go back < to icon and add nav
- Label the nav as secondary

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -8,6 +8,7 @@ general.year-format=yyyy
 general.edit=edit
 general.delete=delete
 general.go-back=Go Back
+general.go-back-region=Secondary
 general.inputs.yes=Yes
 general.inputs.no=No
 general.inputs.continue=Continue
