--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -8,6 +8,7 @@ general.year-format=aaaa
 general.edit=editar
 general.delete=borrar
 general.go-back=Regresa
+general.go-back-region=Secundario
 general.inputs.yes=Sí
 general.inputs.no=No
 general.inputs.continue=Continuar
