Update required fields to use message properties and (required) language

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -29,6 +29,7 @@ general.files.file-added.one=1 file added
 general.files.file-added.other=files added
 general.files.uploaded-documents=Uploaded documents
 general.locked-submission=You've already submitted this application. To protect your data, we can't let you go back at this time.
+general.required-field=(required)
 #
 address-validation.check-your-address=Check your address
 address-validation.header.make-sure-your-address-is-correct=Make sure your address is correct
