--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -28,6 +28,7 @@ general.files.add-your-files=Agregue sus archivos
 general.files.file-added.one=1 archivo agregado
 general.files.file-added.other=archivos agregados
 general.files.uploaded-documents=Documentos subidos
+general.required-field=(requerido)
 #
 address-validation.check-your-address=Verifique su dirección
 address-validation.header.make-sure-your-address-is-correct=Asegúrese de que su dirección sea correcta
