--- a/src/main/resources/messages-form-flow_vi.properties
+++ b/src/main/resources/messages-form-flow_vi.properties
@@ -25,6 +25,7 @@ general.files.file-added.one=\u0110\u00E3 th\u00EAm 1 t\u1EC7p
 general.files.file-added.other=\u0111\u00E3 th\u00EAm t\u1EADp tin
 general.files.uploaded-documents=T\u00E0i li\u1EC7u \u0111\u00E3 t\u1EA3i l\u00EAn
 general.locked-submission=Qu\u00FD v\u1ECB \u0111\u00E3 g\u1EEDi \u0111\u01A1n \u0111\u0103ng k\u00FD n\u00E0y. \u0110\u1EC3 b\u1EA3o v\u1EC7 d\u1EEF li\u1EC7u, hi\u1EC7n qu\u00FD v\u1ECB kh\u00F4ng \u0111\u01B0\u1EE3c ph\u00E9p quay l\u1EA1i.
+general.required-field=(b\u1EAFt bu\u1ED9c)
 #
 address-validation.check-your-address=Ki\u1EC3m tra \u0111\u1ECBa ch\u1EC9 c\u1EE7a qu\u00FD v\u1ECB
 address-validation.header.make-sure-your-address-is-correct=H\u00E3y ch\u1EAFc ch\u1EAFn \u0111\u1ECBa ch\u1EC9 \u0111\u00E3 \u0111\u01B0\u1EE3c nh\u1EADp \u0111\u00FAng
