[CCAP-260] Missing Spanish translation in FFB library

--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -28,6 +28,7 @@ general.files.add-your-files=Agregue sus archivos
 general.files.file-added.one=1 archivo agregado
 general.files.file-added.other=archivos agregados
 general.files.uploaded-documents=Documentos subidos
+general.locked-submission=Ya envió esta solicitud. Para proteger sus datos, no podemos permitirle regresar en este momento.
 general.required-field=(requerido)
 #
 address-validation.check-your-address=Verifique su dirección
