--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -52,6 +52,8 @@ upload-documents.error-could-not-read-file=No pudimos leer el archivo subido. Po
 upload-documents.error-mime-type=El contenido del archivo no coincide con los tipos MIME aceptados.
 upload-documents.error-virus-found=No podemos procesar este archivo porque se detectó un virus. Por favor, intente con otro archivo.
 upload-documents.error-virus-scanner-unavailable=No se pudo acceder al servicio de carga en este momento. Por favor, inténtelo de nuevo más tarde.
+upload-documents.error-unauthorized=No pudimos cargar este archivo porque su sesión ha expirado.
+
 #
 demo.banner-text=<b>El proposito de este sitio es sólo demostrar un ejemplo</b>
 #
