Redirect to the home screen on session expiration

--- a/src/main/resources/messages-form-flow.properties
+++ b/src/main/resources/messages-form-flow.properties
@@ -63,6 +63,7 @@ error.we-are-sorry=We're sorry, but something went wrong. Please try again later
 error.its-not-you-description=We're sorry, but something went wrong. Please try again later.
 error.files.invalid-file-type=We aren't able to upload this type of file. Please try another file that ends in one of the following:
 error.forbidden=You do not have permission to access this resource.
+error.session-expired=Your session expired. In order to protect your data, we have redirected you to the beginning of the application. If you were in the middle of completing your application, please start again.
 #
 state.placeholder=Please select
 state.al=AL - Alabama
