Add spanish translation

--- a/src/main/resources/messages-form-flow_es.properties
+++ b/src/main/resources/messages-form-flow_es.properties
@@ -63,8 +63,9 @@ error.we-are-sorry=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuev
 error.its-not-you-description=Lo sentimos, pero algo salió mal. Por favor inténtelo de nuevo más tarde.
 error.files.invalid-file-type=No podemos cargar este tipo de archivo. Por favor intente con otro archivo que termine en uno de los siguientes:
 error.forbidden=Usted no tiene permiso para acceder a este recurso.
+error.session-expired=Su sesión ha expirado. Para proteger sus datos, le hemos redirigido al inicio de la solicitud. Si estaba completando su solicitud, le pedimos que comience de nuevo.
 #
-state.placeholder=Por favor seleccione 
+state.placeholder=Por favor seleccione
 #
 address.street-address-1=Dirección
 address.street-address-2=Dirección (más detalles)
